Error: still trying to fix image visibility issues

--- a/src/App.css
+++ b/src/App.css
@@ -394,7 +394,6 @@ div .sections {
     width: 100%;
     height: auto;
     margin-top: 30px;
-    margin-bottom: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
